Working add and change building